abstract class IShowSchemaListUC {
  Future<void> showSchemaListUC();
}
